# quration

./: .gitignore  CMakeLists.txt  CMakePresets.json  MANIFEST.in  README.md  pyproject.toml
quration-algorithm/examples/: CMakeLists.txt  LICENSE  compile_adder_to_distributed_chip.cpp  create_add_craig.cpp  create_add_cuccaro.cpp  create_multi_controlled_mod_bi_mul_imm.cpp  create_period_finding.cpp  create_prepare.cpp  create_qpe.cpp  create_qrom.cpp  create_select.cpp  create_trotter.cpp  create_uncompute_qrom.cpp  generate_quration_core_test_circuits.cpp  qpe.cpp  shor.cpp
quration-algorithm/examples/data/: sample_prepare.json  sample_qpe.json  sample_select.json
quration-algorithm/src/: CMakeLists.txt
quration-algorithm/src/qret/algorithm/: README.md
quration-algorithm/tests/: CMakeLists.txt
quration-algorithm/tests/gate/algorithm/: qft.cpp  qpe.cpp
quration-algorithm/tests/gate/arithmetic/: boolean.cpp  integer_add.cpp  integer_compare.cpp  integer_flip.cpp  integer_inc.cpp  integer_mul.cpp  integer_scaled_add.cpp  integer_sub.cpp  modular.cpp
quration-algorithm/tests/gate/data/: qdict.cpp  qrom.cpp
quration-algorithm/tests/gate/frontend/: circuit.cpp
quration-algorithm/tests/gate/preparation/: arbitrary.cpp  uniform.cpp
quration-algorithm/tests/gate/util/: bitwise.cpp  multi_control.cpp  rotation.cpp  util.cpp
quration-core/examples/: CMakeLists.txt  README.md  create_random.cpp  external_decompose_pass.cpp  external_mapping_pass.cpp  grover.cpp  portable_function.cpp  trotter.cpp
quration-core/examples/data/: README.md
quration-core/examples/data/OpenQASM2/: rca.qasm
quration-core/examples/data/circuit/: add_craig_5.json  add_cuccaro_5.json  add_cuccaro_5_pbc.json  branch.json  decompose_using_external_pass.json  mapping_using_external_pass.json  random.json
quration-core/examples/data/pipeline/: decompose_using_external_pass.yaml  mapping_based_on_topology_file.yaml  mapping_using_external_pass.yaml  qret_compile.yaml  qret_compile_branch.yaml  qret_compile_cultivation.yaml  qret_compile_pbc.yaml  qret_compile_random.yaml  qret_opt.yaml  runtime_simulation_pruning.yaml
quration-core/examples/data/topology/: dist_all.yaml  dist_line.yaml  tutorial.yaml
quration-core/examples/external-pass/: decompose.py  mapping.py  opt_ir.py
quration-core/main/: CMakeLists.txt  README.md  main.cpp
quration-core/python/: CMakeLists.txt  README.md
quration-core/python/examples/: README.md  create_adder_from_python.py  create_adder_using_loaded_module.py  get_operation_matrix.py  trotter.py
quration-core/python/examples/data/: 1d_ising_hamiltonian.json
quration-core/python/pyqret/: __init__.py
quration-core/python/pyqret/algorithm/: __init__.py
quration-core/python/pyqret/backend/: __init__.py
quration-core/python/pyqret/frontend/: __init__.py
quration-core/python/pyqret/runtime/: __init__.py
quration-core/python/tests/: conftest.py  test_bigint.py
quration-core/python/tests/algorithm/: test_algorithm_arithmetic_boolean.py  test_algorithm_arithmetic_integer.py  test_algorithm_arithmetic_modular.py  test_algorithm_data.py  test_algorithm_phase_estimation.py  test_algorithm_preparation.py  test_algorithm_transform.py  test_algorithm_util.py
quration-core/python/tests/backend/: test_compiler.py
quration-core/python/tests/frontend/: common.py  test_circuit.py  test_circuit_builder.py  test_intrinsic_gate.py  test_module.py
quration-core/python/tests/runtime/: test_simulator.py
quration-core/src/: CMakeLists.txt
quration-core/src/qret/: README.md  error.h  exception.h  pass.cpp  pass.h  qret_export.h
quration-core/src/qret/analysis/: README.md  circuit_drawer.cpp  circuit_drawer.h  compute_graph.cpp  compute_graph.h  counter.cpp  counter.h  dot.cpp  dot.h  printer.cpp  printer.h  visualizer.cpp  visualizer.h
quration-core/src/qret/base/: README.md  cast.h  graph.cpp  graph.h  gridsynth.cpp  gridsynth.h  iterator.h  json.cpp  json.h  list.h  log.cpp  log.h  option.cpp  option.h  portable_function.cpp  portable_function.h  string.cpp  string.h  system.cpp  system.h  time.h  tribool.h  type.cpp  type.h
quration-core/src/qret/cmd/: README.md  asm.cpp  asm.h  common.h  compile.cpp  compile.h  diagram.cpp  diagram.h  main.cpp  main.h  opt.cpp  opt.h  parse.cpp  parse.h  print.cpp  print.h  profile.cpp  profile.h  simulate.cpp  simulate.h
quration-core/src/qret/codegen/: README.md  asm_printer.cpp  asm_printer.h  asm_streamer.cpp  asm_streamer.h  compile_info.h  dummy.cpp  dummy.h  machine_function.cpp  machine_function.h  machine_function_pass.cpp  machine_function_pass.h
quration-core/src/qret/frontend/: README.md  argument.cpp  argument.h  attribute.cpp  attribute.h  builder.cpp  builder.h  circuit.cpp  circuit.h  circuit_generator.cpp  circuit_generator.h  control_flow.cpp  control_flow.h  functor.cpp  functor.h  intrinsic.cpp  intrinsic.h  openqasm2.cpp  openqasm2.h
quration-core/src/qret/ir/: README.md  basic_block.cpp  basic_block.h  context.h  function.cpp  function.h  function_pass.h  instruction.cpp  instruction.h  instructions.cpp  instructions.h  json.cpp  json.h  metadata.h  module.cpp  module.h  value.h
quration-core/src/qret/math/: README.md  boolean_formula.cpp  boolean_formula.h  clifford.cpp  clifford.h  float.cpp  float.h  fraction.cpp  fraction.h  integer.cpp  integer.h  lcu_helper.cpp  (+3 more)
quration-core/tests/: CMakeLists.txt  test_utils.h
quration-core/tests/analysis/: circuit_drawer.cpp  compute_graph.cpp
quration-core/tests/base/: cast.cpp  graph.cpp  gridsynth.cpp  iterator.cpp  list.cpp  option.cpp  portable_function.cpp  string.cpp  type.cpp
quration-core/tests/cmd/: main.cpp
quration-core/tests/frontend/: builder.cpp  functor.cpp  openqasm2.cpp  openqasm3.cpp
quration-core/tests/ir/: circuit.cpp  instructions.cpp  json.cpp
quration-core/tests/math/: boolean_formula.cpp  clifford.cpp  fraction.cpp  pauli.cpp
quration-core/tests/parser/: openqasm2.cpp  openqasm3.cpp
quration-core/tests/runtime/: call_stack.cpp  clifford_state.cpp  full_quantum_state.cpp  simulator.cpp  toffoli_state.cpp
(+282 files in other folders)
